--- a/数据结构与算法/二叉树结构.html
+++ b/数据结构与算法/二叉树结构.html
@@ -12,7 +12,9 @@
             width: 20px;
             background-color: aqua;
             border-radius: 50%;
-            padding: 5px
+            padding: 5px;
+            position: relative;
+            top: -5px;
         }
         div.tree {
             display: flex;
@@ -25,6 +27,7 @@
             padding-bottom: 3em;
             background-image: url(./img/both.svg);
             background-repeat: no-repeat;
+            animation: opacity 1s linear;
         }
          /* 巧妙地子节点位置放置 */
          .tree > .tree {
@@ -53,33 +56,24 @@
             width: 50%;
             color: aquamarine;
         }
-       
+        
+        @keyframes opacity{
+            0%{
+                opacity: 0;
+            }
+            50%{
+                opacity: 0.5;
+            }
+            100%{
+                opacity: 1;
+            }
+        }
     </style>
 </head>
 <body>
     <h1 id = 'show'></h1>
-    <!-- 测试结构 -->
-    <!-- <div class="tree">
-        <span class="leaf-node">【1】</span>
-        <div class="tree">
-            <span class="leaf-node">【2】</span>
-            <div class="tree">
-              <span class="leaf-node">【5】</span>
-            </div>
-            <div class="tree nright" >
-              <span class="leaf-node">【5】</span>
-            </div>
-        </div>
-        <div class="tree just_only_right">
-            <span class="leaf-node">【2】</span>
-            <div class="tree ">
-              <span class="leaf-node">【5】</span>
-              <div class="tree no_child_node">
-                <span class="leaf-node">【5】</span>
-              </div>
-            </div>
-        </div>
-    </div> -->
+    <button id ='refresh'>刷新</button>
+    <button id ='addNode'>添加节点</button>
     <script>
         // 节点
         class Node{
@@ -87,6 +81,10 @@
                 this.data = data;
                 this.left = left;
                 this.right =right;
+                this.el = null;
+            }
+            bindTag(el){
+                this.el = el;
             }
             show(){
                 return this.data;
@@ -100,7 +98,10 @@
             }
             insert(data){
                 let n = new Node(data,null,null);
-                if(this.root == null) {this.root = n;}
+                if(this.root == null) {
+                    this.root = n;
+                    this.insertHtmlNode(document.body,this.root);
+                }
                 else{
                     let current = this.root;
                     let parent;
@@ -109,20 +110,40 @@
                         if(data<current.data){
                             current = current.left;
                             if(current == null) {
-                                parent.left = n;break
+                                parent.left = n;
+                                let type = parent.right?'all':'left'
+                                this.insertHtmlNode(parent.el,parent.left,type);
+                                break
                             }
                         }else{
                             current = current.right;
                             if(current == null){
-                                parent.right = n;break;
+                                parent.right = n;
+                                let type = parent.left?'all':'right'
+                                this.insertHtmlNode(parent.el,parent.right,type);
+                                break;
                             }
                         }
                     }
                 }
             }
+            //添加视图节点
+            insertHtmlNode(el,node,type){
+                let root = node;
+                    if(root){
+                        let template =  `<div class=" tree no_child_node"> <span> <b>${root.data}</b></span></div>`
+                        let _treedoc = new DOMParser().parseFromString(template, 'text/html') 
+                        let _tree = _treedoc.getElementsByClassName('tree')[0] 
+                        node.bindTag( _tree); 
+                        el.appendChild(_tree);
+                        el.classList.remove('no_child_node','just_only_left','just_only_right')
+                        type==='all'?'':el.classList.add(`just_only_${type}`)
+                    }
+            }
             //展示bst的arr结构
-            show(){
+            show(el){
                 this.inOrder(this.root)
+                el.innerHTML = this.rootArr.toString();
                 return this.rootArr;
             }
             inOrder(node){
@@ -133,41 +154,41 @@
                     this.inOrder(node.right);
                 }
             }
-            //展示bst的tree结构
-            showTree2Html(root){
-                if(root){
-                    let onlyLeft  = (root.left && !root.right)
-                    let onlyRight = (!root.left && root.right)
-                    let noSubTree = !root.left && !root.right
-                    return `
-                    <div id='rootNode' class="
-                        tree
-                        ${noSubTree?'no_child_node':''}
-                        ${onlyLeft?'just_only_left':''}
-                        ${onlyRight?'just_only_right':''}
-                    ">
-                        <span> <b>${root.data}</b> </span>
-                        ${root.left?this.showTree2Html(root.left):''}
-                        ${root.right?this.showTree2Html(root.right):''}
-                    </div>
-                    `                    
-                }
-            }
     }
-    function main(){
-        let BSTObj  =  new BST();
-        new Array(20).fill('').forEach(element => {
-            BSTObj.insert(parseInt(Math.random()*100))
-        });
-        let _html = document.getElementById('show')
-        let _body = document.body;
-        //DOMParser 实例的parseFromString方法可以用来直接将字符串转换为document 文档对象
-        let _treedoc = new DOMParser().parseFromString(BSTObj.showTree2Html(BSTObj.root), 'text/html') 
-        let _tree = _treedoc.getElementById('rootNode')
-        _html.innerHTML = BSTObj.show().toString();
-        _body.appendChild(_tree)
-    }
-    main();
+        function refresh(){
+            let _trees = document.getElementsByClassName('tree');
+            console.log(_trees);
+            [..._trees].forEach(element => {
+                element.remove();
+            });
+            showTreeView()
+        }
+        function addNode(obj){
+            let num = parseInt(Math.random()*100)
+            obj.insert(num)
+        }
+        function createTree(){
+            let BSTObj  =  new BST();
+            new Array(30).fill('').forEach(element => {
+                    let num = parseInt(Math.random()*100)
+                    BSTObj.insert(num)
+            });
+            return BSTObj
+        }
+        function showTreeView(){
+            let BSTObj = createTree()
+            let _html = document.getElementById('show')
+            BSTObj.show(_html);
+            return BSTObj
+        }
+        function main(){
+            let BSTObj = showTreeView()
+            let _refreshBtn = document.getElementById('refresh')
+            let _addNodeBtn = document.getElementById('addNode')
+            _refreshBtn.addEventListener('click',refresh)
+            _addNodeBtn.addEventListener('click',()=>addNode(BSTObj))
+        }
+        main();
     </script>
 </body>
 </html>
