--- a/数据结构与算法/图.html
+++ b/数据结构与算法/图.html
@@ -5,10 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>图</title>
-    <style type="text/css"></style>
+    <style type="text/css">
+      .node{
+        transition: all 1s ease-in-out;
+        cursor: pointer;
+      }
+      .node:hover{
+        transform: scale(1.2);
+      }
+      text{
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
-    <script src="https://d3js.org/d3.v5.js"></script>
+    <Button id='addBtn'> 添加节点</Button>
+    <script src="js/d3.js"></script>
     <script>
       //顶点类
       class Vertex {
@@ -44,16 +56,224 @@
         }
         toString() {}
       }
-      (function(){
-        let width = 300,height = 300;
-        let dataset = [250,210,170,130,90];
-        let rectHeight = 25;
-        var svg = d3.select('body').append('svg').attr('width',width).attr('height',height);
-        svg.selectAll('rect').data(dataset).enter()   //绑定数组 指定选择集的enter部分
-        .append("rect").attr('x',20).attr('y',function(d,i){  
-            return i*rectHeight;
-        }).attr('width',function(d){return d}).attr('height',rectHeight-2).attr('fill','steelblue')
-      })()
+      class Force {
+        constructor(lines, nodes, width = 960, height = 600) {
+          this.lines = lines;
+          this.nodes = nodes;
+          this.line_tags = [];
+          this.node_tags = [];
+          this.svg = null;
+          this.force = null;
+          this.width = width;
+          this.height = height;
+          this.highlighted = null;
+          this.dependsNode = [];
+          this.dependsLinkAndText = [];
+        }
+        getd3Force(){
+          return d3.layout
+            .force()
+            .charge(-150)
+            .linkDistance(100)
+            .size([this.width, this.height]);
+        }
+        getAllLink() {
+          this.line_tags = this.svg
+            .selectAll(".link")
+            .data(this.lines)
+            .enter()
+            .append("line")
+            .attr("class", "link")
+            .attr("stroke", "#09F")
+            .attr("stroke-opacity", "0.4")
+            .style("stroke-width", 2)
+            ;
+        }
+        getAllNode() {
+          let a = this.node_tags
+          this.node_tags = this.svg
+            .selectAll(".node")
+            .data(this.nodes)
+            .enter()
+            .append("g")
+            .call(this.force.drag)
+          this.setNode(this.node_tags)
+        }
+        setNode(node_tags){
+          //取得20个颜色的序列
+          var color = d3.scale.category20();
+          node_tags 
+            .append("circle")
+            .attr("class", "node")
+            .attr("r", function (d) {
+              return 10 + d.group;
+            })
+            .style("fill", function (d) {
+              return color(d.group);
+            });
+          node_tags.transition().duration(2000).ease("blunce")
+          //标记鼠标悬停的标签
+          node_tags.append("title").text(function (d) {
+            return d.name;
+          });
+          node_tags.on('mouseover', (d)=>{
+                this.highlightObject(d)
+            })
+          node_tags.on('mouseout', (d)=>{
+                this.highlightObject(null)
+            })
+          //节点上显示的姓名
+          node_tags
+            .append("text")
+            .attr("dy", ".3em")
+            .attr("class", "nodetext")
+            .style("text-anchor", "middle")
+            .text(function (d) {
+              return d.name;
+            });
+        }
+        highlightObject(obj) {
+          if (obj) {
+            var objIndex = obj.index;
+              this.dependsNode = this.dependsNode.concat([objIndex]);
+              this.dependsLinkAndText = this.dependsLinkAndText.concat([objIndex]);
+              this.lines.forEach( (lkItem)=> {
+                  if (objIndex == lkItem['source']['index']) {
+                      this.dependsNode = this.dependsNode.concat([lkItem.target.index]);
+                  } else if (objIndex == lkItem['target']['index']) {
+                      this.dependsNode = this.dependsNode.concat([lkItem.source.index]);
+                  }
+              });
+
+              // 隐藏节点
+              this.svg.selectAll('circle').filter((d)=>{
+                  return (this.dependsNode.indexOf(d.index) == -1);
+              }).transition().style('opacity', 0.1);
+              // 隐藏线
+              this.svg.selectAll('.link').filter((d)=>{
+                  // return true;
+                  return ((this.dependsLinkAndText.indexOf(d.source.index) == -1) && (this.dependsLinkAndText.indexOf(d.target.index) == -1))
+              }).transition().style('opacity', 0.1);
+
+          } else {
+              // 取消高亮
+              // 恢复隐藏的线
+              this.svg.selectAll('circle').filter(function () {
+                  return true;
+              }).transition().style('opacity', 1);
+              // 恢复隐藏的线
+              this.svg.selectAll('.link').filter((d)=>{
+                  // return true;
+                  return ((this.dependsLinkAndText.indexOf(d.source.index) == -1) && (this.dependsLinkAndText.indexOf(d.target.index) == -1))
+              }).transition().style('opacity', 1);
+              this.highlighted = null,
+                  this.dependsNode = [],
+                  this.dependsLinkAndText = [];
+            }
+          };
+        startTick(link,node){
+           //开始力学动作
+          this.force.on("tick", ()=> {
+            this.line_tags
+              .attr("x1", function (d) {
+                return d.source.x;
+              })
+              .attr("y1", function (d) {
+                return d.source.y;
+              })
+              .attr("x2", function (d) {
+                return d.target.x;
+              })
+              .attr("y2", function (d) {
+                return d.target.y;
+              });
+
+              this.node_tags.attr("transform", function (d) {
+              return "translate(" + d.x + "," + d.y + ")";
+            });
+          });
+        }
+        //生成随机汉字
+        getRandomChineseWord() {
+                var _rsl = "";
+                var _randomUniCode = Math.floor(Math.random() * (40870 - 19968) + 19968).toString(16);
+                eval("_rsl=" + '"\\u' + _randomUniCode + '"');
+                return _rsl;
+        }
+        //获取指定区间范围随机数，包括lowerValue和upperValue
+        randomFrom(lowerValue,upperValue) {
+           return Math.floor(Math.random() * (upperValue - lowerValue + 1) + lowerValue);
+        }
+        updata() {
+          let {lines,nodes,force} = this
+          nodes.push({ 
+            name: this.getRandomChineseWord(), 
+            group: this.randomFrom(10,20) 
+          });
+          lines.push(
+          { 
+              source: nodes.length-1, 
+              target: this.randomFrom(0,nodes.length-1), 
+              value: 1 
+          });
+          this.line_tags = this.line_tags.data(this.force.links())
+          this.line_tags.enter()
+            .append("line")
+            .attr("class", "link")
+            .attr("stroke", "#09F")
+            .attr("stroke-opacity", "0.4")
+            .style("stroke-width", 2)
+          this.node_tags =  this.node_tags.data(this.force.nodes())
+          this.node_tags.enter()
+            .append("g")
+            .call(this.force.drag)
+          this.setNode(this.node_tags)
+          this.node_tags.exit().remove();
+          this.force.start();
+        }
+        init() {
+          //定义画布
+          this.svg = d3
+            .select("body")
+            .append("svg")
+            .attr("width", this.width)
+            .attr("height", this.height);
+          //定义力学结构
+          this.force = this.getd3Force()
+          //设置数据
+          this.force.nodes(this.nodes).links(this.lines).start();
+          //定义连线
+          this.getAllLink();
+          //定义节点标记
+          this.getAllNode();
+          //开始力学动作
+          this.startTick()
+        }
+      }
+      (function () {
+        //ource - 边的源节点;
+        //target - 边的目标节点;
+        //index - 基于 0 的在 links 中的索引, 会自动分配
+        // links.source = node的index
+        let lines = [
+        { source: 0, target: 1, value: 0 },
+        { source: 1, target: 2, value: 3 },
+        { source: 2, target: 3, value: 2 },
+        { source: 3, target: 3, value: 1 },
+        ];
+        let nodes = [
+          { name: "L", group: 5 },
+          { name: "O", group: 6 },
+          { name: "V", group: 7 },
+          { name: "E", group: 8 },
+        ];
+        let f = new Force(lines, nodes, 1900, 940);
+        f.init();
+
+        d3.select('#addBtn').on('click',()=>{
+            f.updata()
+        })
+      })();
     </script>
   </body>
 </html>
